[package]
name = "pybinwalk"
version = "0.0.2"
edition = "2021"
license = "MIT"

[lib]
name = "pybinwalk"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
pyo3 = { version = "=0.28.0", features = ["extension-module", "abi3", "abi3-py38"], optional = true }
binwalk = "=3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
regex = "1"
walkdir = "2"
