[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pybinwalk"
version = "0.0.1"
description = "Python bindings for Binwalk v3"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.maturin]
features = ["python"]
include = ["pybinwalk.pyi", "py.typed"]


