[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pybinwalk"
version = "0.0.3"
description = "Python bindings for Binwalk v3"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Kevin Muñoz" }
]

keywords = [
  "binwalk",
  "reverse-engineering",
  "firmware",
  "binary-analysis",
  "rust-bindings"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage = "https://github.com/kevinmuoz/pybinwalk"
Repository = "https://github.com/kevinmuoz/pybinwalk"
Issues = "https://github.com/kevinmuoz/pybinwalk/issues"
Documentation = "https://github.com/kevinmuoz/pybinwalk#readme"

[tool.maturin]
features = ["python"]
include = ["pybinwalk.pyi", "py.typed"]
